added meta info, robots.txt and hopefully a generating sitemap script

--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
   <!-- Essential Meta Tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Your landing page description here">
+  <meta name="description"
+    content="Joe Zavaletta | Tripplejaz - Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-landing-page-url.com/">
-  <meta property="og:title" content="Your Landing Page Title">
-  <meta property="og:description" content="Your landing page description here">
-  <meta property="og:image" content="https://your-landing-page-url.com/og-image.jpg">
+  <meta property="og:url" content="https://tripplejaz.art/">
+  <meta property="og:title" content="Joe Zavaletta | Tripplejaz - Digital Artist & Animator">
+  <meta property="og:description"
+    content="Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
+  <meta property="og:image" content="https://tripplejaz.art/JoeZavaletta_Profile.webp">
+  <meta property="og:image:alt" content="Joe Zavaletta's portfolio cover image">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://your-landing-page-url.com/">
-  <meta property="twitter:title" content="Your Landing Page Title">
-  <meta property="twitter:description" content="Your landing page description here">
-  <meta property="twitter:image" content="https://your-landing-page-url.com/twitter-image.jpg">
+  <meta property="twitter:url" content="https://tripplejaz.art/">
+  <meta property="twitter:title" content="Joe Zavaletta | Tripplejaz - Digital Artist & Animator">
+  <meta property="twitter:description"
+    content="Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
+  <meta property="twitter:image" content="https://tripplejaz.art/JoeZavaletta_Profile.webp">
+  <meta property="twitter:creator" content="@tripplejaz">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="100x100" href="./src/assets/img/favicon.webp">
@@ -31,11 +36,29 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Other Custom Meta Tags -->
-  <meta name="keywords" content="your,keywords,here">
-  <meta name="author" content="Your Name">
+  <meta name="keywords"
+    content="digital painter, animator, character design, concept art, game art, comic art, illustration, character concepts, digital art, creative illustration">
+  <meta name="author" content="Joe Zavaletta">
+  <meta name="copyright" content="© 2024-2026 Joe Zavaletta. All rights reserved.">
+  <meta name="robots" content="index, follow, noscrape, noimageindex">
+  <meta name="language" content="English">
+
+  <!-- Anti-Scraping & Image Protection -->
+  <meta name="googlebot" content="noscrape, noimageindex">
+  <meta name="bingbot" content="nocache">
+  <meta name="no-email-collection" content="/">
+  <meta name="referrer" content="no-referrer-when-downgrade">
+
+  <!-- Prevent AI Training/Scraping -->
+  <meta name="ai-content-disclosure" content="original">
+  <link rel="ai-plugin" href="https://tripplejaz.art/.well-known/ai-plugin.json">
+
+  <!-- Prevent Unauthorized Use of Content -->
+  <meta property="og:see_also"
+    content="All artwork and content © 2024-2026 Joe Zavaletta. Unauthorized reproduction prohibited.">
 
   <title>
-    Joe Zavelleta | Tripplejaz
+    Joe Zavalleta | Tripplejaz
   </title>
 </head>
 
