pulled out commented email

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Joe Zavaletta | Tripplejaz - Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- Open Graph / Facebook -->
+  <!-- Open Graph / Facebook / Discord -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tripplejaz.art/">
   <meta property="og:title" content="Joe Zavaletta | Tripplejaz - Digital Artist & Animator">
@@ -17,6 +17,10 @@
     content="Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
   <meta property="og:image" content="https://tripplejaz.art/JoeZavaletta_Profile.webp">
   <meta property="og:image:alt" content="Joe Zavaletta's portfolio cover image">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="Tripplejaz Portfolio">
+  <meta property="og:locale" content="en_US">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -48,6 +52,9 @@
   <meta name="bingbot" content="nocache">
   <meta name="no-email-collection" content="/">
   <meta name="referrer" content="no-referrer-when-downgrade">
+
+  <!-- Prevent AI Training/Scraping -->
+  <meta name="ai-content-disclosure" content="original">
 
   <!-- Prevent Unauthorized Use of Content -->
   <meta property="og:see_also"
