--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Joe Zavaletta | Tripplejaz - Digital Artist & Animator">
   <meta property="og:description"
     content="Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
-  <meta property="og:image" content="https://tripplejaz.art/JoeZavaletta_Profile.webp">
+  <meta property="og:image" content="https://tripplejaz.art/assets/meta-splash.jpg">
   <meta property="og:image:alt" content="Joe Zavaletta's portfolio cover image">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -28,7 +28,7 @@
   <meta property="twitter:title" content="Joe Zavaletta | Tripplejaz - Digital Artist & Animator">
   <meta property="twitter:description"
     content="Digital painter and animator specializing in character concepts, concept art for games, comics, and creative illustration.">
-  <meta property="twitter:image" content="https://tripplejaz.art/JoeZavaletta_Profile.webp">
+  <meta property="twitter:image" content="https://tripplejaz.art/assets/meta-splash.jpg">
   <meta property="twitter:creator" content="@tripplejaz">
 
   <!-- Favicon -->
